# Qt-simple-write-to-file

./: README.md
Qarea/: CMakeLists.txt  app.cpp  app.h  main.cpp  readersingleton.cpp  readersingleton.h  rectangle.cpp  rectangle.h  rectangles.cpp  rectangles.h
